# browser2api

./: .gitignore  README.md  README_CN.md  pyproject.toml
examples/: discover_video_api.py  discover_video_duration.py  discover_video_models.py  discover_video_network.py  discover_video_success.py  generate.py  generate_flow.py  generate_flow_video.py  generate_video.py  login.py  test_video_headed.py
src/browser2api/: __init__.py  base.py  browser.py  config.py  types.py
