[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser2api"
version = "0.1.0"
description = "Turn browser UIs into programmatic image generation APIs via Playwright and Chrome CDP"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.25",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/browser2api"]

[tool.ruff]
target-version = "py311"
line-length = 100
